--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Bishayan Banerjee</h1>
-						<p>Presidency School Bangalore North &nbsp;&bull;&nbsp; Grade 10 student &nbsp;&bull;&nbsp; Never asked for this</p>
+						<p>Deeksha North &nbsp;&bull;&nbsp; Grade 11 student &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/bishlemma" target="blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
